# data-analysis-project

./: Ask A Manager Salary Survey 2021 (Responses).xlsx  README.md  Uncleaned_DS_jobs.xlsx  analysis.py  cleaned_warehouse_messy_data.xlsx  messy_HR_data(half-cleaned).xlsx  pyproject.toml  warehouse_analysis.ipynb  warehouse_messy_data.xlsx
.ipynb_checkpoints/: analysis-checkpoint.py
